--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=0,minimum-scale=1,maximum-scale=2"><title>F.U.N个人网站</title><link rel="shortcut icon" href=./favicon.ico type=image/x-icon><meta property=og:image content=https://lmyxywy.github.io/resume_blog/favicon.ico><link rel=apple-touch-icon href=https://lmyxywy.github.io/resume_blog/favicon.ico><link rel=stylesheet href=./static/reset.css><style type=text/css>body {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=0,minimum-scale=1,maximum-scale=2"><title>F.U.N个人网站</title><link rel="shortcut icon" href=./favicon.ico type=image/x-icon><meta property=og:type content=website><meta property=og:title content=F.U.N个性化设计><meta property=og:description content=新版本上线啦！><meta property=og:image content=https://lmyxywy.github.io/resume_blog/wechat_logo_2.png><link rel=apple-touch-icon href=https://lmyxywy.github.io/resume_blog/wechat_logo_2.png><link rel=stylesheet href=./static/reset.css><style type=text/css>body {
 			/* overflow-x: hidden; */
 			width: 100%;
 		}
@@ -6,7 +6,7 @@
 			width: 100vw;
 			height: 100vh;
 			position: fixed;
-			background: linear-gradient(0deg, #404a88, #181d2a);
+			background: linear-gradient(0deg, #fdc947, #fdc947, #fdb83f);
 			top: 0;
 			left: 0;
 			z-index: 10;
@@ -20,9 +20,9 @@
 			left: 0;
 			z-index: 10;
 			font-size: 30px;
-			color: #e6e6e6;
+			color: rgba(63, 6, 47, 0.4);
 			text-align: center;
-			padding: 15vh 0;
+			padding: 10vh 0;
 		}
 		.loading span:nth-child(1){
 			animation:load 0.5s infinite;
@@ -171,4 +171,13 @@
 				right: 0;
 				left: auto;
 			}
-		}</style><link href=./static/css/app.c4267dff7c9aee1449cf1d7be33c817d.css rel=stylesheet></head><body><div id=app><div class=start><div class=start_word><div class=inner style="margin:0 80px;"><div style="background: rgba(255,255,255,0z);width: 200px;margin: 0 auto;color:#ffc30e;"><div class="" style="font-size: 103px;margin-bottom: -20px;"><img src=./static/dang.png style="width: 100px;"></div><div class="" style="font-size: 50px;margin-bottom: -7px;">工作</div><div class="" style="font-size: 33px;">正好是</div><div class="" style="font-size: 20px;padding-bottom: 20px;">爱好的时候</div></div><div class=loading><span>.</span> <span>.</span> <span>.</span></div><div class=sm_word style="padding-top: 30px;">再没有比这更棒的事情了</div><div style="font-size: 12px;color: rgba(255,255,255,0.6);margin-top: 10px;">可以点击页面关闭动画</div></div></div><svg class=waves viewBox="0 24 150 28" preserveAspectRatio=none shape-rendering=auto><defs><path id=gentle-wave d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path></defs><g class=parallax><use xlink:href=#gentle-wave x=48 y=0 fill=rgba(36,42,81,0.7></use><use xlink:href=#gentle-wave x=48 y=3 fill=rgba(36,42,81,0.5)></use><use xlink:href=#gentle-wave x=48 y=5 fill=rgba(36,42,81,0.3)></use><use xlink:href=#gentle-wave x=48 y=7 fill=#242a51></use></g></svg><div class=start style="position: fixed;top: 0;left: 0;z-index: 9;"><div id=stars></div><div id=stars2></div><div id=stars3></div></div><img src=./static/girl.png class=girl_img></div></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.3e4b2181fb5220861efd.js></script><script type=text/javascript src=./static/js/app.a81a8f48b64293a6e9dc.js></script></body></html>
+		}
+		/* 手机端强制横屏 */
+		@media screen and (orientation:portrait) {
+			/* 解决inro页面横屏后，页面高度还是横过来的元素高度，导致右侧出现大片空白 */
+			html,body{
+				height: 100vh;
+				overflow-y: hidden;
+				-webkit-overflow-scrolling: touch !important;
+			}
+		}</style><link href=./static/css/app.10988105ac923fa943080d2e831ce2d8.css rel=stylesheet></head><body><div style=display:none><img src=https://lmyxywy.github.io/resume_blog/wechat_logo_2.png alt=分享预览图></div><div id=app><div class=start><div class=start_word><div class=inner style="margin:0 80px;"><div style="position: relative; z-index: 2; background: rgba(255,255,255,0z);width: 200px;margin: 0 auto;color:#3f062f;"><div class="" style="font-size: 103px;margin-bottom: -20px;"><img src=./static/dang.png style="width: 100px;"></div><div class="" style="font-size: 50px;margin-bottom: -7px;">工作</div><div class="" style="font-size: 33px;">正好是</div><div class="" style="font-size: 20px;padding-bottom: 20px;">爱好的时候</div></div><img src=./static/yellow.gif style="width: 100px;position: relative;z-index: 1;margin-top: -20px;"><div class=sm_word style="padding-top: 30px;position: relative;z-index: 2;margin-top: -40px;">再没有比这更棒的事情了</div><div style="font-size: 12px;color: rgba(63, 6, 47, 0.3);margin-top: 10px;">可以点击页面关闭动画</div></div></div><svg class=waves viewBox="0 24 150 28" preserveAspectRatio=none shape-rendering=auto><defs><path id=gentle-wave d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path></defs><g class=parallax><use xlink:href=#gentle-wave x=48 y=0 fill=rgba(253,164,38,0.7)></use><use xlink:href=#gentle-wave x=48 y=3 fill=rgba(253,164,38,0.5)></use><use xlink:href=#gentle-wave x=48 y=5 fill=rgba(253,164,38,0.3)></use><use xlink:href=#gentle-wave x=48 y=7 fill=#fda426></use></g></svg><div class=start style="position: fixed;top: 0;left: 0;z-index: 9;"><div id=stars></div><div id=stars2></div><div id=stars3></div></div><img src=./static/girl.png class=girl_img></div></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.3e4b2181fb5220861efd.js></script><script type=text/javascript src=./static/js/app.5786ddce49afcedfbaba.js></script></body></html>
